# botnet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  icmp_header.hpp  ipv4_header.hpp  main.cpp
.cache/clangd/index/: client.cpp.F990BBE7780710B0.idx  client.h.5690474B44AEFFAA.idx  main.cpp.CF0CFC617B2367A0.idx  server.cpp.EC7046D315259D36.idx  server.h.1A8CE1A0B3FA7602.idx  session.cpp.8F0722650716AFB7.idx  session.h.44413C3BA6287344.idx
inc/: client.h  helper.h  manager.h  msg_parser.h  packet_sending.h  server.h  session.h  tcp_send.h  thread_pool.h  udp_send.h  user_interface.h  victim_manipulation.h
inc/manager/: manager.h  user_interface.h
inc/server_client/: server.h  thread_pool.h  victim_manipulation.h
scripts/: add_class.sh  client_test.sh  connect_clients.sh  gen_clients.py  gen_test.sh
scripts/templates/: temp.cpp  temp.h
src/: client.cpp  main.cpp  tcp_send.cpp  udp_send.cpp  victim_manipulation.cpp
src/classes/: client.cpp  manager.cpp  msg_parser.cpp  packet_sending.cpp  server.cpp  session.cpp  tcp_send.cpp  user_interface.cpp  victim_manipulation.cpp
src/classes/manager/: manager.cpp
src/classes/server_client/: client.cpp  server.cpp  victim_manipulation.cpp
src/manager/: main.cpp
